2007-05-03 Igor Zelmanovich <igorz@mainsoft.com>

	* HttpApplication.cs:
	* HttpContext.cs:
	handling exceptions occurred if  <system.web/customError> 
	section is not valid.	

2007-05-08  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* BaseParamsCollection.cs: fixed Get(string) property, fixed collection
	lazy initialization

2007-05-03 Igor Zelmanovich <igorz@mainsoft.com>

	* BrowserCapabilities.cs:
	added missing API.	

2007-04-29 Igor Zelmanovich <igorz@mainsoft.com>

	* HttpContext.jvm.cs: Response.End() must abort thread if not async.	

2007-04-29 Igor Zelmanovich <igorz@mainsoft.com>

	* HttpApplication.cs: doesn't cache httpHandlersSection in instance, 
	that allows to consider httpHandlers section in nested web.config.	

2007-04-27  Marek Habersack  <mhabersack@novell.com>

	* XmlSiteMapProvider.cs: add support for siteMapFile attribute.

2007-04-24  Marek Habersack  <mhabersack@novell.com>

            * CapabilitiesLoader.cs: Hashtables used as property containers
            should not be case-insensitive as we now preload the property
            hashes with default properties, to make the code work in case
            browscap.ini is broken or missing. Instead, the keys are
            lower-cased and trimmed before indexing the Hashtable.
            Added all the missing capabilities to the defaultCaps Hashtable.
            The returned Hashtable is not reversed in GetCapabilities anymore
            - it might make the code faster, but it also makes it mismatch
            browsers (e.g. Firefox 2.0 is mismatched for Mozilla 1.8).
            All of the above fixes bug #81437.

2007-04-22 Joshua Tauberer <jit@occams.info>
 
 	* HttpParamsCollection.cs: Fix IndexOutOfRangeException.

2007-04-19  Miguel de Icaza  <miguel@novell.com>

	* BaseParamsCollection.cs (Get (string)): Call LoadInfo here to
	fix #81385

2007-04-17 Igor Zelmanovich <igorz@mainsoft.com>

	* HttpException.cs: used GetBaseException() instead InnerException.
